в ПР-3 внесены упущенные ранее правки

--- a/index.html
+++ b/index.html
@@ -145,35 +145,35 @@
           <li class="image">
             <img
               src="./images/sunset.png"
-              alt="Закат в сиреневых тонах, изображенный с помощью векторной графики"
+              alt="Солнце садится за горами. Векторная иллюстрация"
               loading="lazy"
             >
           </li>
           <li class="image">
             <img
               src="./images/ice-cream.png"
-              alt="Мороженое в стиле chibi, изображенное с помощью векторной графики"
+              alt="Мороженое в стиле chibi. Векторная иллюстрация"
               loading="lazy"
             >
           </li>
           <li class="image">
             <img
               src="./images/tape.png"
-              alt="Кассета с музыкой, изображенная с помощью векторной графики"
+              alt="Кассета с музыкой. Векторная иллюстрация"
               loading="lazy"
             >
           </li>
           <li class="image">
             <img
               src="./images/books.png"
-              alt="Нарисованная чашка стоит наверху стопки книг, изображенных с помощью векторной графики"
+              alt="Чашка стоит наверху стопки книг. Векторная иллюстрация"
               loading="lazy"
             >
           </li>
           <li class="image">
             <img
               src="./images/street.png"
-              alt="Улица в сиреневых тонах, изображенная с помощью векторной графики"
+              alt="Улица в перспективе. Векторная иллюстрация"
               loading="lazy"
             >
           </li>
