--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
       </div>
     </header>
     <main class="sections">
-      <section-why class="section content-section">
+      <section class="section content-section">
         <h2 class="subtitle-decor-question question-offset-less">Почему сосредоточиться так сложно</h2>
-        <article>
-          <div>
+        <div>
+          <article>
             <h3 class="subtitle-decor subtitle-decor-content-offset-medium">Многозадачность</h3>
             <p class="description">Особенно сложно сосредоточиться, когда задач много и все они — важные.
             Где же легендарная многозадачность, когда она так нужна вам (и всем нанимающим менеджерам этого мира)?
@@ -62,45 +62,45 @@
             даже на двух делах одновременно. А когда в поле внимания попадает несколько важных задач, организм
             паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за этого мы работаем невнимательно:
             ошибаемся и быстро устаём.</p>
-          </div>
-          <div> 
+          </article>
+          <article> 
             <h3 class="subtitle-decor subtitle-decor-content-offset-less">Дофамин</h3>
             <p class="description">С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей невозможности сосредоточиться
             замешана и полная противоположность стрессу — дофамин. Это вещество участвует в системе вознаграждения
             мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то более «приятное» для мозгов.
             Например, смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы чувствуем удовольствие.
             Получается замкнутый круг: чем больше отвлекаешься, тем больше удовольствия получаешь.</p>
-          </div>
-        </article>
-      </section-why>
-      <section-causes class="section"> 
-        <h2 class="subtitle-decor-question question-offset-more">Что снижает концентрацию внимания?</h2>
-        <article class="content-sections">
-          <div>
+          </article>
+        </div>
+      </section>
+      <section class="section"> 
+        <h2 class="subtitle-decor-question subtitle-decor-question-less question-offset-more">Что снижает концентрацию внимания?</h2>
+        <div class="content-sections">
+          <article>
             <h3 class="subtitle-decor subtitle-decor-inline-offset subtitle-decor-inline-offsets">Многозадачность</h3>
-            <p class="description description-inline-offset descriptions">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация
+            <p class="description descriptions">Как концентрация может снижаться из-за… концентрации? Любая стрессовая ситуация
             (и резко меняющийся мир в целом) заставляет наш мозг постоянно «сканировать» окружающую среду на
             предмет опасности. Например, читать новости вместо работы. Но быть собранными всё время — невозможно.
             Концентрация — мышца, и она может не выдержать, если не давать ей отдохнуть.</p>
-          </div>
-          <div>
+          </article>
+          <article>
             <h3 class="subtitle-decor subtitle-decor-inline-offset subtitle-decor-inline-offsets subtitle-decor-content-offset-less subtitle-decor-content-no-offset">Еда</h3>
             <p class="description description-inline-offset descriptions">«Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно доставляют в мозг
             энергию и помогают ему лучше работать. Но уходит эта энергия также быстро, как и приходит. А мы в
             результате попадаем на «углеводные качели»: как только действие «быстрых углеводов» заканчивается, мы
             чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.</p>
-          </div>
-         <div>
+          </article>
+         <article>
             <h3 class="subtitle-decor subtitle-decor-inline-offset subtitle-decor-inline-offsets subtitle-decor-content-offset-less subtitle-decor-content-no-offset">Гаджеты</h3>
             <p class="description description-inline-offset descriptions">Да-да, это та самая ситуация, когда на экране ноутбука — код, в наушниках —
             подкаст, а на компьютере фоном — ещё и видео с забавными утятами. В результате мозг пытается
             переключиться с одной задачи на другую — и просто не может. А чтобы вернуться к состоянию полной
             концентрации, человеку в среднем нужно 20 минут. Вот и получается, что чем больше времени мы проводим
             в гаджетах, тем больше времени затем нужно, чтобы вернуться к работе.</p>
-          </div>
-        </article>
-      </section-causes>
-      <section-advices class="section content-section">
+          </article>
+        </div>
+      </section>
+      <section class="section content-section">
         <h2 class="subtitle-decor-question question-offset-more">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
         <article>
           <h3 class="subtitle-decor subtitle-decor-content-offset-more">5 простых (на самом деле не очень) советов</h3>
@@ -138,9 +138,9 @@
             тренирует направленное внимание.</p>
           </div>
         </article>  
-      </section-advices> 
-      <section-visual class="section gallery gallery-offset">
-        <h2 class="subtitle-decor subtitle-decor-inline-offset question-offset-more">А можно в картинках?</h2>
+      </section> 
+      <section class="section gallery gallery-offset">
+        <h2 class="subtitle-decor subtitle-decor-content-offset subtitle-decor-content-offset-more subtitle-decor-inline-offset">А можно в картинках?</h2>
         <ul class="gallery__item">
           <li class="image">
             <img
@@ -178,7 +178,7 @@
             >
           </li>
         </ul>
-      </section-visual>    
+      </section>    
     </main>
     <footer class="footer decorated-zone">
       <h2 class="title title-shadow-offset title-align">focus</h2>
